tdf#166104 sw: Fix for apostrophes changing to Asian font

Regression from 537645c0834eab2d277113f1e3fcf039c994832d
"tdf#66791 sw: Treat weak punctuation as Asian in Asian paragraphs"

The fix for tdf#66791 extended the script change scanner to always treat
weak quotation-like punctuation as Asian script in paragraphs containing
Asian characters. That new behavior emulates the behavior of other word
processing programs.

Unfortunately, the change proved too disruptive. This change
substantially reverts the new behavior added for tdf#66791, but leaves
the refactoring and testing work intact.

Change-Id: I9eaf91f27a4e8f7440c949a713c6b64fe8dc579b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185812
Tested-by: Jenkins
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>
(cherry picked from commit 86ffb108824d884320bde3320d58c8c497780099)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186015
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>